...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstrai
                                                        <rect key="frame" x="20" y="8" width="0.0" height="0.0"/>
                                                        <accessibility key="accessibilityConfiguration" label="name"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                                        <nil key="textColor"/>
...
                                                        <rect key="frame" x="20" y="16" width="0.0" height="0.0"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="year"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="QhZ-mz-0qh">
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="minPlayer"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="m3I-Bj-cTz">
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="maxPlayer"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="4x0-yP-uxc">
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="category"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="JL1-uu-NqE">
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="publisher"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                        <nil key="textColor"/>
...
                                                        <rect key="frame" x="19.999999999999993" y="8" width="110.33333333333331" height="0.0"/>
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <accessibility key="accessibilityConfiguration" label="description"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                        <nil key="textColor"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qOg-Lg-qaG">
                                                        <rect key="frame" x="19.999999999999993" y="10" width="110.33333333333331" height="34.333333333333336"/>
                                                        <accessibility key="accessibilityConfiguration" label="learnMore"/>
                                                        <state key="normal" title="Button"/>
                                                        <buttonConfiguration key="configuration" style="plain" title="Learn More"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lfd-5
                                                        <rect key="frame" x="20" y="8" width="50" height="50"/>
                                                        <accessibility key="accessibilityConfiguration" label="age"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                                        <nil key="textColor"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstrai
                                                        <rect key="frame" x="20" y="58" width="50" height="0.0"/>
                                                        <accessibility key="accessibilityConfiguration" label="playingTime"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                                        <nil key="textColor"/>
...
