...
            )
        )
    }

    var listData: BoardGameGeek.BoardGameService.Result {
        let boardGames = [
            BoardGame(objectID: "1234", name: "Ticket to Ride", yearPublished: 2020),
            BoardGame(objectID: "2345", name: "Ticket to Ride: Europe", yearPublished: 2022),
        ]

        return BoardGameService.Result.list(boardGames)
    }

...
